--- a/views/worldLandmarks.ejs
+++ b/views/worldLandmarks.ejs
@@ -112,6 +112,7 @@
 
         <script>
             <% include ./js/cloudinary %>
+            <% include ./js/imageGallery %>
             <% include ./js/map %>
             <% include ./js/addNewMarker %> 
             <% include ./js/loadMarkersToMap %>
