--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -8,11 +8,10 @@
 body {
 	/*    background-color: black;*/
 	overflow: none;    
-}
-
-.body {
 	background-color: #131518;
 }
+
+button:focus {outline:0;}
 
 /* For mobile phones: */
 [class*="col-"] {
@@ -307,17 +306,17 @@ body {
 	}
 
 	#camera-button {
-		width: 40px;                
+		width: 25px;                
 	}
 
 	.map-button {
-		width: 80px;
-		height: 80px;
+		width: 50px;
+		height: 50px;
 		background-color: #1396FC;
 		border-radius: 50px;
 		position: absolute; 
-		bottom: 230px; 
-		right: 30px; 
+		bottom: 220px; 
+		right: 20px; 
 		z-index: 2;
 		font-size: 24px;
 		border: none;
@@ -331,16 +330,16 @@ body {
 
 	.map-button-square {
 		width: 130px;
-		height: 40px;
+		height: 30px;
 		background-color: #1396FC;        
 		position: absolute; 
-		bottom: 250px; 
-		right: 95px; 
+		bottom: 230px; 
+		right: 50px; 
 		z-index: 1;
 		font-size: 24px;
 		border: none;        
 		padding: 10px 10px 10px 15px;               
-		line-height: 20px;
+		line-height: 10px;
 		font-size: 20px;
 		border-radius: 5px;
 		color: white;
@@ -3309,7 +3308,6 @@ body {
 
 .form-input:focus{
 	outline:none;
-
 }
 
 .form-input--date {
