--- a/views/mySubmissions.ejs
+++ b/views/mySubmissions.ejs
@@ -1,7 +1,7 @@
 <!-- A page were the user can see if there marker has been accepted -->
 <!DOCTYPE html>
 <html>
-    <body>
+    <body class="user-page">
         <head>
             <% include ./partials/head %>
         </head>
