--- a/views/approval.ejs
+++ b/views/approval.ejs
@@ -37,7 +37,9 @@
                 <div class="info-container">
                     <button class="approveButton" >Approve</button>
                     <button class="rejectButton" >Reject</button>
-                    <div id="markerId" class="">id</div>                
+                    <div style="display:none;" id="markerId" class="">id</div> 
+					
+					
                     <div id="markerTitle" class="info-panel__title">Approval/Reject Page</div>                
                     <div id="markerDate" class="info-panel__date"></div>
 
@@ -279,8 +281,6 @@
             <% include ./js/galleryButtons %> 
         </script>    
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-
         <script>
 
             // TODO Remove marker "display = none;" when accepted or rejected
@@ -344,8 +344,6 @@
 
 
     </body>
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 
 </html>
