Remove use of home page
Links changed to map page instead of home

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="nav-bar__container">
         <a class="navbar__icon" href="/"><img src="/icons/InYourArea%2048%20fav.png" class="navbar__icon"></a>
 
-        <a class="nav-bar__title" href="/">In Your Area</a>
+        <a class="nav-bar__title" href="/worldLandmarks">In Your Area</a>
 
         <a class="nav-bar__title login" href="/user/loginOrRegister">Log In/Sign Up</a>        
         <a href="/user/mySubmissions" class="nav-bar__title user">User Page</a>
