--- a/views/loginOrRegister.ejs
+++ b/views/loginOrRegister.ejs
@@ -19,7 +19,7 @@
             <p>Create an account or login</p>
             <a href="/user/register" class="button-blue-ow btn-block">Register</a>
             <a href="/user/login" class="btn btn-secondary btn-block mb-2">Login</a>
-            <a href="/" class="btn btn-secondary btn-block">Home</a>
+            <a href="/worldLandmarks" class="btn btn-secondary btn-block">Home</a>
                     
         </div>
     </div>
